--- a/webapp/view/ItemDetails.view.xml
+++ b/webapp/view/ItemDetails.view.xml
@@ -476,42 +476,56 @@
 						<subSections>
 							<ObjectPageSubSection id="idPreOrderItem" title="Pre-Order Items" mode="Expanded">
 								<blocks>
-									<m:Table id="idItemsTable2" inset="false" items="{TabDetailsModel>/ZPRE_ORD_ITEMSet}" mode="MultiSelect"
-										selectionChange="itemTableSelectionChange" class="sapUiSizeCompact" visible="true">
-										<m:headerToolbar class="zhdrTlbar">
+									<m:Table id="idItemsTable2" inset="false" items="{TabDetailsModel>/PreOrderItemTableData}" class="sapUiSizeCompact" visible="true">
+										<m:headerToolbar >
 											<m:OverflowToolbar>
 												<m:content>
 													<m:Text text="PRE-ORDER ITEMS"/>
 													<m:ToolbarSpacer/>
-													<m:Button text="Add Item" type="Ghost" press="addPreOrderItemButtonPress1"/>
+													<m:Button text="Add Item" type="Ghost" press="addPreOrderItemPress"/>
 												</m:content>
 											</m:OverflowToolbar>
 										</m:headerToolbar>
 										<m:columns>
-											<!--<m:Column minScreenWidth="Desktop" demandPopin="true" popinDisplay="Inline">-->
-											<!--	<m:Label text="Item #" design="Bold"/>-->
-											<!--</m:Column>-->
-											<m:Column minScreenWidth="Desktop" demandPopin="true" hAlign="Center" popinDisplay="Inline">
-												<m:Label text="Quantity" design="Bold" wrapping="true"/>
+											<m:Column >
+												<m:Label text="Quantity"/>
 											</m:Column>
-											<m:Column minScreenWidth="Desktop" demandPopin="true" hAlign="Center" popinDisplay="Inline">
-												<m:Label text="Manufacturer" design="Bold" wrapping="true"/>
+											<m:Column>
+												<m:Label text="Manufacturer"/>
 											</m:Column>
-											<m:Column minScreenWidth="Desktop" demandPopin="true" hAlign="Center" popinDisplay="Inline">
-												<m:Label text="Part#" design="Bold" wrapping="true"/>
+											<m:Column>
+												<m:Label text="Part#"/>
 											</m:Column>
-											<m:Column minScreenWidth="Desktop" demandPopin="true" hAlign="Center" popinDisplay="Inline">
-												<m:Label text="Description" design="Bold" wrapping="true"/>
+											<m:Column >
+												<m:Label text="Description"/>
+											</m:Column>
+											<m:Column>
+												<m:Label text=""/>
+											</m:Column>
+											<m:Column >
+												<m:Label text=""/>
 											</m:Column>
 										</m:columns>
 										<m:items>
 											<m:ColumnListItem>
 												<m:cells>
 													<!--<m:Text text="{preOrderItemModelName>ItemNo}"/>-->
-													<m:Text text="{TabDetailsModel>Quantity}"/>
-													<m:Text text="{TabDetailsModel>Manufaturer}"/>
-													<m:Text text="{TabDetailsModel>PartNumber}"/>
-													<m:Text text="{TabDetailsModel>Description}"/>
+													<m:Input maxLength="30"
+														value="{ path: 'TabDetailsModel>Quantity', type: 'sap.ui.model.type.String', constraints: { minLength: 1, maxLength: 30 } }"
+														enabled="{= ${TabDetailsModel>EditMode} ? true : false}"/>
+													<m:Input maxLength="30"
+														value="{ path: 'TabDetailsModel>Manufaturer', type: 'sap.ui.model.type.String', constraints: { minLength: 1, maxLength: 30 } }"
+														enabled="{= ${TabDetailsModel>EditMode} ? true : false}"/>
+													<m:Input maxLength="30"
+														value="{ path: 'TabDetailsModel>PartNumber', type: 'sap.ui.model.type.String', constraints: { minLength: 1, maxLength: 30 } }"
+														enabled="{= ${TabDetailsModel>EditMode} ? true : false}"/>
+													<m:Input maxLength="30"
+														value="{ path: 'TabDetailsModel>Description', type: 'sap.ui.model.type.String', constraints: { minLength: 1, maxLength: 30 } }"
+														enabled="{= ${TabDetailsModel>EditMode} ? true : false}"/>
+													<m:HBox>
+														<m:Button class="sapUiTinyMarginBeginEnd" text="Edit" type="Emphasized" press="onEditPreOrderItem"/>
+														<m:Button class="sapUiTinyMarginBeginEnd" text="Delete" type="Reject" press="onDeletePreOrderItem"/>
+													</m:HBox>
 												</m:cells>
 											</m:ColumnListItem>
 										</m:items>
