--- a/webapp/view/ItemDetails.view.xml
+++ b/webapp/view/ItemDetails.view.xml
@@ -678,7 +678,7 @@
 												<!--</m:RadioButtonGroup>-->
 											</m:VBox>
 										</m:VBox>
-										<m:Table id="idItemsTable233" inset="false" items="{itemRecordModelName>/results}" mode="MultiSelect"
+										<m:Table id="idItemsTable233" inset="false" items="{TabDetailsModel>/ETOAttachmentSet}" mode="MultiSelect"
 											selectionChange="itemTableSelectionChange" class="sapUiSizeCompact" visible="true">
 											<m:headerToolbar class="zhdrTlbar">
 												<m:OverflowToolbar>
@@ -705,10 +705,10 @@
 											<m:items>
 												<m:ColumnListItem>
 													<m:cells>
-														<m:Text text="{AttachmentsModel>Source}"/>
-														<m:Link text="{AttachmentsModel>Filename}" href="{AttachmentsModel>Url}" press="onViewDoc" target="_blank"/>
-														<m:Text text="{AttachmentsModel>User}"/>
-														<m:Text text="{AttachmentsModel>Date}-{AttachmentsModel>Time}"/>
+														<m:Text text="{TabDetailsModel>Source}"/>
+														<m:Link text="{TabDetailsModel>Filename}" href="{TabDetailsModel>Url}" press="onViewDoc" target="_blank"/>
+														<m:Text text="{TabDetailsModel>User}"/>
+														<m:Text text="{TabDetailsModel>Date}-{TabDetailsModel>Time}"/>
 														<core:Icon src="sap-icon://sys-cancel" class="size1" color="xe1c7" press="onAttachmentItemDelete">
 															<core:layoutData>
 																<m:FlexItemData growFactor="1"/>
